--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,25 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Uruchom zadanie 2 - Backend",
+      "label": "Uruchom zadanie 2 - Backend (NodeJS)",
       "type": "shell",
       "options": {
         "cwd": "${workspaceFolder}\\nodejs\\backend"
       },
       "command": "npm start",
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "Uruchom zadanie 3 - Tetris (Lua)",
+      "type": "shell",
+      "options": {
+        "cwd": "${workspaceFolder}\\"
+      },
+      "command": "love lua",
       "problemMatcher": [],
       "group": {
         "kind": "build",
